# faceblur-server-fastapi

./: .gitignore  default.conf  pyproject.toml  run.py  setup.sh  start_app.sh
.github/workflows/: tests.yml
app/: main.py
app/api/routes/: api.py
app/api/v1/routes/: api.py  ml.py  uploader.py
app/api/v1/routes/articles/: api.py
app/api/v2/routes/: api.py  ml.py
app/api/v2/routes/articles/: api.py
app/core/: config.py
app/core/settings/: app.py  base.py  development.py  test.py
app/db/queries/: tables.py
app/gesturedetection/: video_processor.py  video_queue_processor.py
app/gesturedetection/models/: asl_recognition_model811.h5  label_mappings.json  scaler.save
app/ml/: model.py  process.py  utils.py
app/models/domain/: ml.py
