[tool.poetry]
name = "faceblur-server"
version = "0.0.0"
description = "Backend logic implementation for https://github.com/gothinkster/realworld with awesome FastAPI"
authors = ["Nik Sidnev <sidnev.nick@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.18.2"
fastapi = "^0.115.5"
pydantic = { version = "^1.9", extras = ["email", "dotenv"] }
passlib = { version = "^1.7", extras = ["bcrypt"] }
pyjwt = "^2.4"
databases = "^0.6.1"
asyncpg = "^0.29.0"
joblib = "^1.4.2"
psycopg2-binary = "^2.9.3"
aiosql = "^6.2"
pypika = "^0.48.9"
alembic = "^1.8"
python-slugify = "^6.1"
Unidecode = "^1.3"
loguru = "^0.6.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.2"
tflite = "^2.10.0"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.15"
gunicorn = "^23.0.0"
ultralytics = "^8.3.13"
huggingface-hub = "^0.25.2"
huggingface = "^0.0.1"
datasets = "^3.0.1"
transformers = {extras = ["torch"], version = "^4.45.2"}
matplotlib = "^3.9.2"
tqdm = "^4.66.5"
python-multipart = "^0.0.12"
imageio = "^2.36.0"
boto3 = "^1.35.56"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
tensorflow = "^2.18.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"
mypy = "^0.971"
flake8-fixme = "^1.1"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-asyncio = "^0.19.0"
pytest-env = "^0.6.2"
pytest-xdist = "^2.4.0"
httpx = "^0.23.0"
asgi-lifespan = "^1.0.1"

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
  --numprocesses=auto
  --asyncio-mode=auto
'''
env = [
  "SECRET_KEY=secret",
  "MAX_CONNECTIONS_COUNT=1",
  "MIN_CONNECTIONS_COUNT=1",
]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
